--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,19 @@
 {
   "name": "poller-server",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
-    "start": "tsc && node ./build/index.js",
+    "dev2": "ts-node ./src/index.ts",
+    "build": "tsc --project tsconfig.json",
+    "start": "tsc --project tsconfig.json && node ./build/index.js",
     "lint": "eslint ./src/**/* --fix --ext .ts"
   },
   "dependencies": {
-    "fastify": "^3.14.0"
+    "fastify": "^3.14.0",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.31",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
