--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -7,6 +7,7 @@
    "database": "poller",
    "synchronize": true,
    "logging": true,
+   "cache": true,
    "entities": [
       "build/entity/**/*.js"
    ],
