--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint ./src/**/* --fix --ext .ts"
   },
   "dependencies": {
-    "fastify": "^3.14.0",
+    "apollo-server": "^2.21.2",
+    "class-validator": "^0.13.1",
+    "graphql": "^15.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "typedi": "^0.10.0",
     "typeorm": "^0.2.31",
+    "typeorm-typedi-extensions": "^0.4.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
