--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apollo-server": "^2.21.2",
     "class-validator": "^0.13.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
