--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.35",
+    "graphql": "^15.5.0",
     "vue": "^3.0.0",
+    "vue-apollo": "^3.0.7",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -31,6 +34,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   }
 }
