--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.13",
+    "@vue/apollo-composable": "^4.0.0-alpha.12",
+    "@vue/apollo-option": "^4.0.0-alpha.11",
     "apollo-boost": "^0.4.9",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.35",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "vue": "^3.0.0",
     "vue-apollo": "^3.0.7",
     "vue-router": "^4.0.0-0",
