--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@vue/apollo-composable": "^4.0.0-alpha.12",
     "@vue/apollo-option": "^4.0.0-alpha.11",
     "apollo-boost": "^0.4.9",
+    "chart.js": "^3.0.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.35",
     "graphql": "^15.5.0",
